[package]
name = "up"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
incremental = false
rpath = false

[dependencies.xbrz-rs]
version = "0.1.0"

[dependencies.clap]
version = "4.5.48"
features = ["derive"]

[dependencies.png]
version = "0.18.0"

[dependencies.image]
version = "0.25.8"
default-features = false
features = ["png"]
